[B]1.0.2[/B]
- Added Live CD Case as default Music Viz Background
- Added Artist Slideshow Support in Music Viz
- Added Extra Fanart Option in Music Viz
- Added Animate Fanart Option in Music Viz
- Added Diffuse FanArt Option for Opaque Music Viz 

[B]1.0.1[/B]

- Added Delay to Info Popup FanArt Media View
- Added Large Font
- Added Kiosk Mode
- Returned Skin Settings to Settings Menu
- Added QWERTY Keyboard
- BugFix Duplicate Lang Strings

[B]1.0.0[/B]

- Initial Mod of Confluence
- Added Custom Main Menu
- Added Individual Backgrounds