@@ -27,6 +27,83 @@
 			<animation effect="fade" time="200">VisibleChange</animation>
 			<visible>![Window.IsVisible(AddonSettings) | Window.IsVisible(SelectDialog) | Window.IsVisible(VisualisationPresetList)]</visible>
 		</control>
+		<control type="group" id="1100">
+			<visible>!IsEmpty(Window(Visualisation).Property(ArtistSlideshow.ArtistBiography)) + Skin.HasSetting(AllowSlideShowBio)</visible>
+			<visible>![Window.IsVisible(AddonSettings) | Window.IsVisible(SelectDialog) | Window.IsVisible(VisualisationPresetList)]</visible>
+			<animation effect="fade" time="200">VisibleChange</animation>
+			<posx>20</posx>
+			<posy>40</posy>
+			<control type="image" id="1101">
+				<description>Artist Biography background</description>
+				<posx>0</posx>
+				<posy>0</posy>
+				<width>1240</width>
+				<height>435</height>
+				<colordiffuse>AAFFFFFF</colordiffuse>
+				<texture border="10">ContentPanel.png</texture>
+			</control>
+			<control type="grouplist" id="1102">
+				<posx>10</posx>
+				<posy>10</posy>
+				<height>415</height>
+				<aligny>center</aligny>
+				<itemgap>5</itemgap>
+				<orientation>vertical</orientation>
+				<control type="image" id="1103">
+					<width>100</width>
+					<height>100</height>
+					<texture diffuse="livecdcase/cdmask.png">$INFO[Window(Visualisation).Property(ArtistSlideshow.1.AlbumThumb)]</texture>
+				</control>
+				<control type="image" id="1104">
+					<width>100</width>
+					<height>100</height>
+					<texture diffuse="livecdcase/cdmask.png">$INFO[Window(Visualisation).Property(ArtistSlideshow.2.AlbumThumb)]</texture>
+				</control>
+				<control type="image" id="1105">
+					<width>100</width>
+					<height>100</height>
+					<texture diffuse="livecdcase/cdmask.png">$INFO[Window(Visualisation).Property(ArtistSlideshow.3.AlbumThumb)]</texture>
+				</control>
+				<control type="image" id="1106">
+					<width>100</width>
+					<height>100</height>
+					<texture diffuse="livecdcase/cdmask.png">$INFO[Window(Visualisation).Property(ArtistSlideshow.4.AlbumThumb)]</texture>
+				</control>
+			</control>
+			<control type="label" id="1107">
+				<posx>120</posx>
+				<posy>10</posy>
+				<width>1100</width>
+				<height>35</height>
+				<font>font30_title</font>
+				<textcolor>blue</textcolor>
+				<scroll>true</scroll>
+				<align>center</align>
+				<aligny>center</aligny>
+				<label>$INFO[MusicPlayer.Artist]</label>
+			</control>
+			<control type="image" id="1108">
+				<posx>640</posx>
+				<posy>60</posy>
+				<width>576</width>
+				<height>360</height>
+				<aspectratio aligny="center">keep</aspectratio>
+				<texture fallback="Fanart_Fallback_Music_Small.jpg" background="true" diffuse="episodematte.png">$INFO[MusicPlayer.Property(Fanart_Image)]</texture>
+			</control>
+			<control type="textbox" id="1109">
+				<posx>120</posx>
+				<posy>45</posy>
+				<width>510</width>
+				<height>380</height>
+				<align>justify</align>
+				<aligny>top</aligny>
+				<font>font13</font>
+				<scroll>true</scroll>
+				<wrapmultiline>true</wrapmultiline>
+				<autoscroll time="2000" delay="10000" repeat="5000">Skin.HasSetting(AutoScroll)</autoscroll>
+				<label>$INFO[Window(Visualisation).Property(ArtistSlideshow.ArtistBiography)]</label>
+			</control>
+		</control>
 		<control type="slider" id="87">
 			<description>Seek Slider</description>
 			<posx>430</posx>
