@@ -9,6 +9,7 @@
 	<import addon="script.favourites" version="4.0.8"/>
 	<import addon="script.tvtunes" version="3.0.4"/>
 	<import addon="script.globalsearch" version="1.1.1"/>
+	<import addon="script.artistslideshow" version="1.5.0"/>
   </requires>
   <extension
     point="xbmc.gui.skin"
