@@ -1,9 +1,12 @@
 [B]1.0.2[/B]
 - Added Live CD Case as default Music Viz Background
-- Added Artist Slideshow Support in Music Viz
+- Added Artist Slideshow Support in Music Viz (New Requirement script.artistslideshow)
+- Added Artist Bio to Music OSD
 - Added Extra Fanart Option in Music Viz
 - Added Animate Fanart Option in Music Viz
-- Added Diffuse FanArt Option for Opaque Music Viz 
+- Added Diffuse FanArt Option for Opaque Music Viz
+- Added CD Art Option to Music Viz
+- Added Playlist Button to MusicOSD 
 
 [B]1.0.1[/B]
 
